--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.9",
     "axios": "^1.7.9",
     "docxtemplater": "^3.60.1",
     "file-saver": "^2.0.5",
@@ -23,10 +24,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
-    "react-qr-reader": "^3.0.0-beta-1",
     "react-router-dom": "^7.2.0",
     "recharts": "^2.15.1",
-    "tailwindcss": "^4.0.8",
+    "tailwindcss": "^4.0.9",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
