added AllAsset backend

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=3000
-MONGO_URI=mongodb+srv://aaryaba03:P1M1Lc3nvUvG3jhy@ams.pe4hq.mongodb.net/?retryWrites=true&w=majority&appName=AMS
+MONGO_URI=mongodb+srv://aaryaba03:P1M1Lc3nvUvG3jhy@ams.pe4hq.mongodb.net/ams?retryWrites=true&w=majority&appName=AMS
