--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.2.0",
+    "react-select": "^5.10.1",
     "recharts": "^2.15.1",
     "tailwindcss": "^4.0.9",
     "xlsx": "^0.18.5"
