--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,11 +15,12 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "docxtemplater": "^3.60.1",
+    "dom-to-image": "^2.6.0",
     "express": "^4.21.2",
     "file-saver": "^2.0.5",
     "framer-motion": "^12.4.10",
     "html5-qrcode": "^2.3.8",
-    "jspdf": "^3.0.0",
+    "jspdf": "^3.0.1",
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.476.0",
     "mongoose": "^8.12.1",
