--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js" 
+    "start": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
@@ -18,11 +18,13 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "express-async-handler": "^1.2.0",
+    "googleapis": "^148.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.14.0",
     "mongoose": "^8.11.0",
     "multer": "^1.4.5-lts.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^6.10.0",
     "qrcode": "^1.5.4",
     "socket.io-client": "^4.8.1",
     "streamifier": "^0.1.1"
